Updeted user service test case